# ChangeLog for www-servers/tomcat
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.204 2008/12/20 18:12:22 serkan Exp $

  21 Jan 2009; Mike Weissman <mike@weisso.com> files/5.5/tomcat.init.2,
  files/5.5/tomcat-openrc.init, files/6/tomcat.init,
  files/6/tomcat-openrc.init, +tomcat-5.5.27-r4.ebuild,
  +tomcat-6.0.18-r4.ebuild:
  revbump for init script improvement bug 191611, ebuild improvements for
  bug 180519

  15 Jan 2009; Mike Weissman <mike@weisso.com> tomcat-6.0.18-r3.ebuild:
  added URL for NB bug, thanks fordfrog for help

  12 Jan 2009; Petteri Räty <betelgeuse@gentoo.org>
  tomcat-6.0.18-r3.ebuild:
  Remove trailing white space.

  12 Jan 2009; Mike Weissman <mike@weisso.com> tomcat-6.0.18-r3.ebuild:
  added emerge --config for netbeans for bug #254526

  05 Jan 2009; Mike Weissman <mike@weisso.com>
  +files/5.5/26-main_tomcat_catalina_jasper_build_xml.patch,
  +files/5.5/5.5.27-dynamic-JSSE13Factory.patch, +files/5.5/catalina.policy,
  +files/5.5/jsr152_jsr154_examples_build_xml.patch,
  +files/5.5/tomcat.init.2, +files/5.5/tomcat.conf.2,
  +files/6/build-xml.patch, +files/6/catalina.policy,
  +files/5.5/tomcat-openrc.init, +files/6/tomcat.conf, +files/6/tomcat.init,
  +files/6/tomcat-openrc.init, +metadata.xml, +tomcat-5.5.27-r3.ebuild,
  +tomcat-6.0.18-r3.ebuild:
  updated ebuilds for bug #243348

  20 Dec 2008; Serkan Kaba <serkan@gentoo.org> files/5.5/tomcat.init.2,
  files/6/tomcat.init:
  Fix initscripts for openrc-0.4.0 reported in bug #243348. Thanks to Mike
  Weissman <mike@weisso.com> for testing and the patch.

*tomcat-6.0.18-r2 (19 Dec 2008)
*tomcat-5.5.27-r2 (19 Dec 2008)

  19 Dec 2008; Alistair Bush <ali_bush@gentoo.org> files/5.5/tomcat.conf.2,
  files/6/tomcat.conf, files/5.5/tomcat.init.2, files/6/tomcat.init,
  +tomcat-5.5.27-r2.ebuild, +tomcat-6.0.18-r2.ebuild:
  Bump tomcat. Update init script to test for temp dir to fix #246362.
