@@ -15,6 +15,6 @@ DIST apache-tomcat-6.0.18-src.tar.gz 3484249 RMD160 ef85db0d65a4f3bdd3ca821420d0
 EBUILD tomcat-5.5.27-r3.ebuild 11391 RMD160 824bc04bea4a05d70063b2db6517c3d29fc5fdbd SHA1 6232ff022693d59972a097862d59bc0ad2632ccd SHA256 b6d0cf229601adea90d885a98d068ae02752b18a94d985cf2e07c33c9c737398
 EBUILD tomcat-5.5.27-r4.ebuild 12184 RMD160 6edadaac2f7858574beca2177b01af60bf9a39a2 SHA1 ab84c68de0240a0da4f5d3aa84c7c332643c0db7 SHA256 61d0c44dd2ee4950a0ed748b1cccf2cb85693e108844f9d704120d0cf9388762
 EBUILD tomcat-6.0.18-r3.ebuild 10797 RMD160 8e32b35efc5969ba330f0eb14e803daf77763092 SHA1 d60f4b078f55cc2839f56c601ba212242ea8f3de SHA256 f29c1d113ec60b9a0fbf5bd3a9f1844f1cb551597007aa6fc3382fdcb7fbbc14
-EBUILD tomcat-6.0.18-r4.ebuild 11620 RMD160 f251add4910a13cbc5aec1b711a717a9adaf11c0 SHA1 c2361e8f0612fc0437dea7606baf2fe1992f9ba2 SHA256 3c2d384d533d44188b4bf96442255b24a95ed8fce7518c7134e92b72ce1e77c0
-MISC ChangeLog 56922 RMD160 6dd53c9b17aba0e0f435156344a5deda71ee2b78 SHA1 201f7216b729c9c3e060f40d3596907bc8d42edf SHA256 8be25f17e4d4835422109c524952bface3eb9718809a3c3009559a0f2f20fc2b
+EBUILD tomcat-6.0.18-r4.ebuild 11609 RMD160 b7bd872450b81a265a0e79cb8fc2d3ab7fedc9c1 SHA1 eeba659533016add55fd3906d446690479b56fa2 SHA256 f7d636fc3c4226a14dc8f71106f6964dd3505f2f83e955d3b8d8d954b4565587
+MISC ChangeLog 57029 RMD160 84b7dec48bdbecf9c4347149e1ea1f6adff223e3 SHA1 3d4a8dd0f6fdf161978b5069dea7d192d9a4c4a4 SHA256 2babeda8206ae6b462c86ff4c813b1eceb3097856486531286f8af1d28c1adc2
 MISC metadata.xml 658 RMD160 db94c7bc6ba622acfe88f970aa7d2e6fa1718a2a SHA1 aa25178fefb68df9dee7d8fc0d925a2fbbb655dd SHA256 5ddc2743ca9e3ec0bef7983248a9c8eda9238425288efb3acdecc8a828714bd8
