@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.204 2008/12/20 18:12:22 serkan Exp $
 
+  22 Jan 2009; Mike Weissman <mike@weisso.com> tomcat-6.0.18-r4.ebuild:
+  updated misleading einfo blocks
+
   21 Jan 2009; Mike Weissman <mike@weisso.com> files/5.5/tomcat.init.2,
   files/5.5/tomcat-openrc.init, files/6/tomcat.init,
   files/6/tomcat-openrc.init, +tomcat-5.5.27-r4.ebuild,
